Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -419,6 +419,146 @@
       "value": "حركة قذيفة"
     }
   },
+  "ar_SA": {
+    "cannonball": {
+      "value": "القذيفة المدفعية"
+    },
+    "pumpkin": {
+      "value": "اليقطين"
+    },
+    "baseball": {
+      "value": "كرة البسيبول"
+    },
+    "car": {
+      "value": "السياره"
+    },
+    "football": {
+      "value": "كرة القدم"
+    },
+    "human": {
+      "value": "الشخص"
+    },
+    "piano": {
+      "value": "البيانو"
+    },
+    "golfBall": {
+      "value": "كرة قولف"
+    },
+    "tankShell": {
+      "value": "القذيفه "
+    },
+    "custom": {
+      "value": "مخصص"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "mass": {
+      "value": "كتله"
+    },
+    "kg": {
+      "value": "كجم"
+    },
+    "diameter": {
+      "value": "القطر"
+    },
+    "m": {
+      "value": "م"
+    },
+    "dragCoefficient": {
+      "value": "معامل الازاحة"
+    },
+    "airResistance": {
+      "value": "مقاومة الهواء"
+    },
+    "velocityVectors": {
+      "value": "متجه السرعة"
+    },
+    "accelerationVectors": {
+      "value": "متجه التسارع"
+    },
+    "total": {
+      "value": "المجموع"
+    },
+    "components": {
+      "value": "المركبة السينية والمركبة الصادية"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "ْ"
+    },
+    "time": {
+      "value": "الزمن"
+    },
+    "s": {
+      "value": "ث"
+    },
+    "range": {
+      "value": "المعدل"
+    },
+    "height": {
+      "value": "الارتفاع"
+    },
+    "initialSpeed": {
+      "value": "السرعة الأولية"
+    },
+    "metersPerSecond": {
+      "value": "م/ث"
+    },
+    "meters": {
+      "value": "أمتار"
+    },
+    "normal": {
+      "value": "عادي"
+    },
+    "slow": {
+      "value": "بطئ"
+    },
+    "screen.intro": {
+      "value": "المقدمة"
+    },
+    "forceVectors": {
+      "value": "متجهات القوة"
+    },
+    "altitude": {
+      "value": "الأرتفاع"
+    },
+    "screen.drag": {
+      "value": "السحب"
+    },
+    "metersPerSecondSquared": {
+      "value": "م/ث2"
+    },
+    "gravity": {
+      "value": "الجاذبية"
+    },
+    "initialValues": {
+      "value": "القيم الأولية"
+    },
+    "angle": {
+      "value": "الزاوية"
+    },
+    "speed": {
+      "value": "السرعة"
+    },
+    "enter": {
+      "value": "الدخول"
+    },
+    "rangeMessage": {
+      "value": "{{min}} to {{max}} {{units}}"
+    },
+    "screen.lab": {
+      "value": "المعمل"
+    },
+    "screen.vectors": {
+      "value": "المتجهات"
+    },
+    "projectile-motion.title": {
+      "value": "حركة المقذوفات"
+    }
+  },
   "az": {
     "cannonball": {
       "value": "Top mərmisi"
