Update development strings from daily grunt work

--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -6666,6 +6666,221 @@
       "value": "Salário Mínimo (U$) x. Inflação Ajustada"
     }
   },
+  "ro": {
+    "custom.graphTitle": {
+      "value": "Caz particular"
+    },
+    "temperatureCelsiusLatitude.graphTitle": {
+      "value": "Temperatură (˚C) vs. Latitudine"
+    },
+    "temperatureCelsiusLatitude.yAxisTitle": {
+      "value": "Temperatura medie din ianuarie (˚C)"
+    },
+    "temperatureCelsiusLatitude.xAxisTitle": {
+      "value": "Latitudine"
+    },
+    "temperatureCelsiusLatitude.reference": {
+      "value": "Temperatura medie din ianuarie  în 50 de oraşe\nmari din SUA în funcţie de latitudini"
+    },
+    "temperatureCelsiusLongitude.graphTitle": {
+      "value": "Temperatură (˚C) vs. Longitudine"
+    },
+    "temperatureCelsiusLongitude.yAxisTitle": {
+      "value": "Temperatura medie din ianuarie (˚C)"
+    },
+    "temperatureCelsiusLongitude.xAxisTitle": {
+      "value": "Longitudine"
+    },
+    "temperatureCelsiusLongitude.reference": {
+      "value": "Temperatura medie din ianuarie  în 50 de oraşe\nmari din SUA în funcţie de longitudini"
+    },
+    "temperatureFahrenheitLatitude.graphTitle": {
+      "value": "Temperatură (˚F) vs. Latitudine"
+    },
+    "temperatureFahrenheitLatitude.yAxisTitle": {
+      "value": "Temperatura medie din ianuarie (˚C)"
+    },
+    "temperatureFahrenheitLatitude.xAxisTitle": {
+      "value": "Latitudine"
+    },
+    "temperatureFahrenheitLatitude.reference": {
+      "value": "Temperatura medie din ianuarie  în 50 de oraşe\nmari din SUA în funcţie de latitudini"
+    },
+    "temperatureFahrenheitLongitude.graphTitle": {
+      "value": "Temperatură (˚F) vs. Longitudine"
+    },
+    "temperatureFahrenheitLongitude.yAxisTitle": {
+      "value": "Temperatura medie din ianuarie (˚F)"
+    },
+    "temperatureFahrenheitLongitude.xAxisTitle": {
+      "value": "Longitudine"
+    },
+    "temperatureFahrenheitLongitude.reference": {
+      "value": "Temperatura medie din ianuarie  în 50 de oraşe\nmari din SUA în funcţie de longitudini"
+    },
+    "spendingSalary.graphTitle": {
+      "value": "Cheltuieli vs. Salarii"
+    },
+    "spendingSalary.yAxisTitle": {
+      "value": "Cheltuieli medii per elev (USD) în mii"
+    },
+    "spendingSalary.xAxisTitle": {
+      "value": "Salarii medii profesori (USD) în mii"
+    },
+    "spendingSalary.reference": {
+      "value": "Cheltuielile medii per elev comparate cu salariile\nmedii ale profesorilor din 50 de state SUA în 1986"
+    },
+    "wageYear.graphTitle": {
+      "value": "Salariul minim vs. timp"
+    },
+    "wageYear.yAxisTitle": {
+      "value": "Salariul minim (USD) actualizat cu rata inflaţiei"
+    },
+    "wageYear.xAxisTitle": {
+      "value": "Ani din 1947"
+    },
+    "wageYear.reference": {
+      "value": "Valoarea salariului minim în SUA din 1947-2005, cu rata inflaţiei"
+    },
+    "mortalityYear.graphTitle": {
+      "value": "Mortalitatea lamantinilor vs. timp"
+    },
+    "mortalityYear.yAxisTitle": {
+      "value": "Numărul de morţi în rândul lamantinilor"
+    },
+    "mortalityYear.xAxisTitle": {
+      "value": "Ani din 1947"
+    },
+    "mortalityYear.reference": {
+      "value": "Mortalitatea totală a lamantinilor din Florida din 1974-2004"
+    },
+    "userYear.graphTitle": {
+      "value": "Utilizatori de internet vs. timp"
+    },
+    "userYear.yAxisTitle": {
+      "value": "Total utilizatori de internet (miliarde)"
+    },
+    "userYear.xAxisTitle": {
+      "value": "Ani din 1990"
+    },
+    "userYear.reference": {
+      "value": "Total utilizatori globali de internet din 1990-2010"
+    },
+    "gasolineYear.graphTitle": {
+      "value": "Preţul benzinei în SUA vs. timp"
+    },
+    "gasolineYear.yAxisTitle": {
+      "value": "Preţul per galon (USD)"
+    },
+    "gasolineYear.xAxisTitle": {
+      "value": "Ani din 1976"
+    },
+    "gasolineYear.reference": {
+      "value": "Preţul anual mediul al benzinei din\n1979-2014, fără inflaţie"
+    },
+    "lifeTV.graphTitle": {
+      "value": "Speranţa de viaţă vs. Televizoare"
+    },
+    "lifeTV.yAxisTitle": {
+      "value": "Speranţa de viaţă (ani)"
+    },
+    "lifeTV.xAxisTitle": {
+      "value": "Număr mediu de oameni per TV"
+    },
+    "lifeTV.reference": {
+      "value": "Speranţa de viaţă din 40 de ţări comparată cu\nnumărul mediu de oameni per TV în ţara respectivă"
+    },
+    "speedDistance.graphTitle": {
+      "value": "Viteza orbitală vs. distanţa de la Soare"
+    },
+    "speedDistance.yAxisTitle": {
+      "value": "Viteza orbitală medie (km/s)"
+    },
+    "speedDistance.xAxisTitle": {
+      "value": "Distanţa de la Soare (UA)"
+    },
+    "speedDistance.reference": {
+      "value": "Viteza orbitală a planetei / distanţa de la Soare"
+    },
+    "temperatureFahrenheitChirp.graphTitle": {
+      "value": "Temperatura (˚F) vs. sunete de greiere"
+    },
+    "temperatureFahrenheitChirp.yAxisTitle": {
+      "value": "Temperatura (˚F)"
+    },
+    "temperatureFahrenheitChirp.xAxisTitle": {
+      "value": "Sunete de greiere în 15 secunde"
+    },
+    "temperatureFahrenheitChirp.reference": {
+      "value": "Numărul de sunete de greiere într-un interval de 15 secunde\ncomparat cu temperatura în acelaşi timp"
+    },
+    "temperatureCelsiusChirp.graphTitle": {
+      "value": "Temperatura (˚C) vs. sunete de greiere"
+    },
+    "temperatureCelsiusChirp.yAxisTitle": {
+      "value": "Temperatura (˚C)"
+    },
+    "temperatureCelsiusChirp.xAxisTitle": {
+      "value": "Sunete de greiere în 15 secunde"
+    },
+    "temperatureCelsiusChirp.reference": {
+      "value": "Numărul de sunete de greiere într-un interval de 15 secunde\ncomparat cu temperatura în acelaşi timp"
+    },
+    "heightShoe.graphTitle": {
+      "value": "Înălţimea vs. mărimea la pantofi"
+    },
+    "heightShoe.yAxisTitle": {
+      "value": "Înălţimea (in)"
+    },
+    "heightShoe.xAxisTitle": {
+      "value": "Mărimea la pantofi (SUA)"
+    },
+    "heightShoe.reference": {
+      "value": "Mărimea la pantofi folosită pentru a estima înălţimea"
+    },
+    "symbol.x": {
+      "value": "x"
+    },
+    "symbol.y": {
+      "value": "z"
+    },
+    "sum": {
+      "value": "suma"
+    },
+    "bestFitLine": {
+      "value": "Graficul cel mai apropiat"
+    },
+    "residuals": {
+      "value": "Valori reziduale"
+    },
+    "squaredResiduals": {
+      "value": "Valori reziduale pătrate"
+    },
+    "a": {
+      "value": "a"
+    },
+    "b": {
+      "value": "b"
+    },
+    "myLine": {
+      "value": "Graficul meu"
+    },
+    "symbol.r": {
+      "value": "r"
+    },
+    "correlationCoefficient": {
+      "value": "Coeficientul\nde corelare"
+    },
+    "sourcePattern": {
+      "value": "Sursa: {0}"
+    },
+    "questionMark": {
+      "value": "?"
+    },
+    "least-squares-regression.title": {
+      "value": "Regresia celor mai mici pătrate"
+    }
+  },
   "ru": {
     "bestFitLine": {
       "value": "«Лучшая» линия регрессии"
