Update development strings from daily grunt work

--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -894,34 +894,34 @@
       "value": "Despesa vs. Sous"
     },
     "spendingSalary.yAxisTitle": {
-      "value": "Despesa Mitjana Per Alumne ($) en milers"
+      "value": "Despesa mitjana per alumne ($) en milers"
     },
     "spendingSalary.xAxisTitle": {
-      "value": "Sou Mitjà d'un Professor ($) en milers"
+      "value": "Sou mitjà d'un professor ($) en milers"
     },
     "spendingSalary.reference": {
       "value": "Despesa mitjana per alumne en comparació amb els sous\nmitjans dels professors en cinquanta estats dels EUA el 1986."
     },
     "wageYear.graphTitle": {
-      "value": "Sou Mínim vs. Temps"
+      "value": "Sou mínim vs. Temps"
     },
     "wageYear.yAxisTitle": {
-      "value": "Sou Mínim ($) Ajustat a la Inflació"
+      "value": "Sou mínim ($) ajustat a la inflació"
     },
     "wageYear.xAxisTitle": {
-      "value": "Anys Des Del 1947"
+      "value": "Anys des del 1947"
     },
     "wageYear.reference": {
       "value": "Valor del sou mínim als EUA entre \n1947-2005, ajustat a la inflació."
     },
     "mortalityYear.graphTitle": {
-      "value": "Mortalitat de Manatís vs. Temps"
+      "value": "Mortalitat de manatís vs. Temps"
     },
     "mortalityYear.yAxisTitle": {
-      "value": "Nombre de Manatís Morts"
+      "value": "Nombre de manatís morts"
     },
     "mortalityYear.xAxisTitle": {
-      "value": "Anys Des Del 1974"
+      "value": "Anys des del 1974"
     },
     "mortalityYear.reference": {
       "value": "Mortalitat total de manatís a Florida entre 1974-2004."
@@ -930,43 +930,43 @@
       "value": "Usuaris d'Internet vs. Temps"
     },
     "userYear.yAxisTitle": {
-      "value": "Total d'Usuaris d'Internet (en milers de milions)"
+      "value": "Total d'usuaris d'Internet (en milers de milions)"
     },
     "userYear.xAxisTitle": {
-      "value": "Anys Des Del 1990"
+      "value": "Anys des del 1990"
     },
     "userYear.reference": {
       "value": "Total global d'usuaris d'Internet entre 1990-2010."
     },
     "gasolineYear.graphTitle": {
-      "value": "Preu de la Gasolina als EUA vs. Temps"
+      "value": "Preu de la gasolina als EUA vs. Temps"
     },
     "gasolineYear.yAxisTitle": {
-      "value": "Preu per Galó ($)"
+      "value": "Preu per galó ($)"
     },
     "gasolineYear.xAxisTitle": {
-      "value": "Anys Des Del 1976"
+      "value": "Anys des del 1976"
     },
     "gasolineYear.reference": {
       "value": "Preu mitjà anual de la gasolina entre\n1979-2014, sense ajustar a la inflació."
     },
     "lifeTV.graphTitle": {
-      "value": "Esperança de Vida vs. TVs"
+      "value": "Esperança de vida vs. TVs"
     },
     "lifeTV.yAxisTitle": {
-      "value": "Esperança de Vida (en anys)"
+      "value": "Esperança de vida (en anys)"
     },
     "lifeTV.xAxisTitle": {
-      "value": "Nombre Mitjà de Persones Per TV"
+      "value": "Nombre mitjà de persones per TV"
     },
     "lifeTV.reference": {
       "value": "Esperança de vida a 40 països en comparació amb\nel nombre mitjà de persones per TV a cada país."
     },
     "speedDistance.graphTitle": {
-      "value": "Velocitat Orbital vs. Distància des del Sol"
+      "value": "Velocitat orbital vs. Distància des del Sol"
     },
     "speedDistance.yAxisTitle": {
-      "value": "Velocitat Orbital Mitjana (km/s)"
+      "value": "Velocitat orbital mitjana (km/s)"
     },
     "speedDistance.xAxisTitle": {
       "value": "Distància des del Sol (UA)"
@@ -975,37 +975,37 @@
       "value": "Velocitat orbital planetària per distància des del Sol."
     },
     "temperatureFahrenheitChirp.graphTitle": {
-      "value": "Temperatura (˚F) vs. Cants de Grill"
+      "value": "Temperatura (˚F) vs. Cants de grill"
     },
     "temperatureFahrenheitChirp.yAxisTitle": {
       "value": "Temperatura (˚F)"
     },
     "temperatureFahrenheitChirp.xAxisTitle": {
-      "value": "Nombre de Cants de Grill en 15 segons"
+      "value": "Nombre de cants de grill en 15 segons"
     },
     "temperatureFahrenheitChirp.reference": {
-      "value": "Nombre de Cants de Grill en un període de 15 segons\nen comparació amb la temperatura al mateix temps."
+      "value": "Nombre de cants de grill en un període de 15 segons\nen comparació amb la temperatura al mateix temps."
     },
     "temperatureCelsiusChirp.graphTitle": {
-      "value": "Temperatura (˚C) vs. Cants de Grill"
+      "value": "Temperatura (˚C) vs. Cants de grill"
     },
     "temperatureCelsiusChirp.yAxisTitle": {
       "value": "Temperatura (˚C)"
     },
     "temperatureCelsiusChirp.xAxisTitle": {
-      "value": "Nombre de Cants de Grill en 15 segons"
+      "value": "Nombre de cants de grill en 15 segons"
     },
     "temperatureCelsiusChirp.reference": {
-      "value": "Nombre de Cants de Grill en un període de 15 segons\nen comparació amb la temperatura al mateix temps."
+      "value": "Nombre de cants de grill en un període de 15 segons\nen comparació amb la temperatura al mateix temps."
     },
     "heightShoe.graphTitle": {
-      "value": "Alçada vs. Talla de Peu"
+      "value": "Alçada vs. Talla de peu"
     },
     "heightShoe.yAxisTitle": {
       "value": "Alçada (in)"
     },
     "heightShoe.xAxisTitle": {
-      "value": "Talla de Peu (EUA)"
+      "value": "Talla de peu (EUA)"
     },
     "heightShoe.reference": {
       "value": "Talla de peu utilitzada per predir l'alçada."
@@ -1020,13 +1020,13 @@
       "value": "suma total"
     },
     "bestFitLine": {
-      "value": "Recta de Millor Ajust"
+      "value": "Recta de millor ajust"
     },
     "residuals": {
       "value": "Residus"
     },
     "squaredResiduals": {
-      "value": "Residus Quadrats"
+      "value": "Residus quadrats"
     },
     "a": {
       "value": "a"
@@ -1035,13 +1035,13 @@
       "value": "b"
     },
     "myLine": {
-      "value": "La Meva Recta"
+      "value": "La meva recta"
     },
     "symbol.r": {
       "value": "r"
     },
     "correlationCoefficient": {
-      "value": "Coeficient de\nCorrelació"
+      "value": "Coeficient de\ncorrelació"
     },
     "sourcePattern": {
       "value": "Font: {0}"
@@ -1050,7 +1050,7 @@
       "value": "?"
     },
     "least-squares-regression.title": {
-      "value": "Regressió de Mínims Quadrats"
+      "value": "Regressió de mínims quadrats"
     }
   },
   "cs": {
