--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -1127,16 +1127,16 @@
       "value": "m"
     },
     "dragCoefficient": {
-      "value": "Coeficient d'Arrossegament"
+      "value": "Coeficient d'arrossegament"
     },
     "airResistance": {
-      "value": "Resistència de l'Aire"
+      "value": "Resistència de l'aire"
     },
     "velocityVectors": {
-      "value": "Vectors de Velocitat"
+      "value": "Vectors de velocitat"
     },
     "accelerationVectors": {
-      "value": "Vectors d'Acceleració"
+      "value": "Vectors d'acceleració"
     },
     "total": {
       "value": "Total"
@@ -1163,7 +1163,7 @@
       "value": "Altura"
     },
     "initialSpeed": {
-      "value": "Velocitat Inicial"
+      "value": "Velocitat inicial"
     },
     "metersPerSecond": {
       "value": "m/s"
@@ -1181,7 +1181,7 @@
       "value": "Introducció"
     },
     "forceVectors": {
-      "value": "Vectors de Força"
+      "value": "Vectors de força"
     },
     "altitude": {
       "value": "Altitud"
@@ -1196,7 +1196,7 @@
       "value": "Gravetat"
     },
     "initialValues": {
-      "value": "Valors Inicials"
+      "value": "Valors inicials"
     },
     "angle": {
       "value": "Angle"
@@ -1217,7 +1217,7 @@
       "value": "Vectors"
     },
     "projectile-motion.title": {
-      "value": "Moviment del Projectil"
+      "value": "Moviment del projectil"
     }
   },
   "cs": {
