Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -2939,6 +2939,9 @@
     "custom": {
       "value": "Al'ada"
     },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}}{{units}}"
+    },
     "mass": {
       "value": "Nauyi"
     },
@@ -2969,11 +2972,17 @@
     "components": {
       "value": "Abokan hadi"
     },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
     "time": {
       "value": "Lokaci"
     },
     "s": {
-      "value": "Daƙiƙa"
+      "value": "s"
     },
     "range": {
       "value": "Tsawo na ƙasa"
@@ -2985,7 +2994,7 @@
       "value": "Gudun farko"
     },
     "metersPerSecond": {
-      "value": "Nisan mira a daƙiƙa ɗaya"
+      "value": "m/s"
     },
     "meters": {
       "value": "Mita"
@@ -3026,8 +3035,14 @@
     "enter": {
       "value": "Shiga"
     },
+    "rangeMessage": {
+      "value": "{{min}} to {{max}} {{units}}"
+    },
     "screen.lab": {
       "value": "Ɗakin binciken kimiyya"
+    },
+    "screen.vectors": {
+      "value": "Hamilai"
     },
     "projectile-motion.title": {
       "value": "Tafiyar abında aka jefa "
