Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -6942,6 +6942,146 @@
       "value": "Кретање пројектила "
     }
   },
+  "st": {
+    "cannonball": {
+      "value": "bolo ea kannon"
+    },
+    "pumpkin": {
+      "value": "mokopu"
+    },
+    "baseball": {
+      "value": "bolo ea beisi"
+    },
+    "car": {
+      "value": "koloi"
+    },
+    "football": {
+      "value": "bolo ea maoto"
+    },
+    "human": {
+      "value": "motho"
+    },
+    "piano": {
+      "value": "piano"
+    },
+    "golfBall": {
+      "value": "bolo kolofo"
+    },
+    "tankShell": {
+      "value": "moqomo oa shell"
+    },
+    "custom": {
+      "value": "tloaelo"
+    },
+    "pattern0Value1UnitsWithSpace": {
+      "value": "{{value}} {{units}}"
+    },
+    "mass": {
+      "value": "boima"
+    },
+    "kg": {
+      "value": "kg"
+    },
+    "diameter": {
+      "value": "bolelele"
+    },
+    "m": {
+      "value": "m"
+    },
+    "dragCoefficient": {
+      "value": "drag coefficient"
+    },
+    "airResistance": {
+      "value": "ho hanyetsa hoa moea"
+    },
+    "velocityVectors": {
+      "value": "vector ea lebelo"
+    },
+    "accelerationVectors": {
+      "value": "vector ea ho potlakisa"
+    },
+    "total": {
+      "value": "kaofela"
+    },
+    "components": {
+      "value": "likarolo"
+    },
+    "pattern0Value1Units": {
+      "value": "{{value}}{{units}}"
+    },
+    "degreesSymbol": {
+      "value": "˚"
+    },
+    "time": {
+      "value": "nako"
+    },
+    "s": {
+      "value": "s"
+    },
+    "range": {
+      "value": "mefuta-futa"
+    },
+    "height": {
+      "value": "bophamo"
+    },
+    "initialSpeed": {
+      "value": "lebelo la pele"
+    },
+    "metersPerSecond": {
+      "value": "m/s"
+    },
+    "meters": {
+      "value": "mithara"
+    },
+    "normal": {
+      "value": "tloaeleileng"
+    },
+    "slow": {
+      "value": "butle"
+    },
+    "screen.intro": {
+      "value": "selekela"
+    },
+    "forceVectors": {
+      "value": "matla a li-vector"
+    },
+    "altitude": {
+      "value": "althichut"
+    },
+    "screen.drag": {
+      "value": "hulanya"
+    },
+    "metersPerSecondSquared": {
+      "value": "m/s²"
+    },
+    "gravity": {
+      "value": "matla a lefaat'se a ho hula"
+    },
+    "initialValues": {
+      "value": "boleng ba pele"
+    },
+    "angle": {
+      "value": "Angles"
+    },
+    "speed": {
+      "value": "lebelo"
+    },
+    "enter": {
+      "value": "kenya"
+    },
+    "rangeMessage": {
+      "value": "{{min}} to {{max}} {{units}}"
+    },
+    "screen.lab": {
+      "value": "lebo"
+    },
+    "screen.vectors": {
+      "value": "li-vecors"
+    },
+    "projectile-motion.title": {
+      "value": "motsamao oa projectile"
+    }
+  },
   "sv": {
     "accelerationVectors": {
       "value": "Accelerationsvektorer"
