Update development strings from daily grunt work

--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -1,4 +1,219 @@
 {
+  "am": {
+    "custom.graphTitle": {
+      "value": "ማስተካከያ"
+    },
+    "temperatureCelsiusLatitude.graphTitle": {
+      "value": "የሙቀት መጠን (˚ሴ) እና ኬክሮስ"
+    },
+    "temperatureCelsiusLatitude.yAxisTitle": {
+      "value": "አማካይ የጥር የሙቀት መጠን (˚ሴ)"
+    },
+    "temperatureCelsiusLatitude.xAxisTitle": {
+      "value": "ኬክሮስ"
+    },
+    "temperatureCelsiusLatitude.reference": {
+      "value": "አማካኝ የጥር ሙቀት በሃምሳ\\ኤን ዋና ዋና የአሜሪካ ከተሞች ከኬክሮስዎቻቸው ጋር ሲነጻጸር።"
+    },
+    "temperatureCelsiusLongitude.graphTitle": {
+      "value": "የሙቀት መጠን (˚ሴ) እና ኬንትሮስ"
+    },
+    "temperatureCelsiusLongitude.yAxisTitle": {
+      "value": "ማካይ የጥር የሙቀት መጠን (˚ሴ)"
+    },
+    "temperatureCelsiusLongitude.xAxisTitle": {
+      "value": "ኬንትሮስ"
+    },
+    "temperatureCelsiusLongitude.reference": {
+      "value": "አማካኝ የጥር ሙቀት በሃምሳ\\ኤን ዋና ዋና የአሜሪካ ከተሞች ከኬንትሮሶች ጋር ሲነጻጸር።"
+    },
+    "temperatureFahrenheitLatitude.graphTitle": {
+      "value": "የሙቀት መጠን (˚ፋራናይት) እና ኬክሮስ"
+    },
+    "temperatureFahrenheitLatitude.yAxisTitle": {
+      "value": "አማካይ የጥር የሙቀት መጠን (˚ፋራናይት)"
+    },
+    "temperatureFahrenheitLatitude.xAxisTitle": {
+      "value": "ኬክሮስ"
+    },
+    "temperatureFahrenheitLatitude.reference": {
+      "value": "አማካኝ የጃንዋሪ ሙቀት በሃምሳ\\ኤን ዋና ዋና የአሜሪካ ከተሞች ከኬክሮስዎቻቸው ጋር ሲነጻጸር።"
+    },
+    "temperatureFahrenheitLongitude.graphTitle": {
+      "value": "የሙቀት መጠን (˚ፋራናይት) እና ኬንትሮስ"
+    },
+    "temperatureFahrenheitLongitude.yAxisTitle": {
+      "value": "አማካይ የጥር የሙቀት መጠን (˚ፋራናይት)"
+    },
+    "temperatureFahrenheitLongitude.xAxisTitle": {
+      "value": "ኬንትሮስ"
+    },
+    "temperatureFahrenheitLongitude.reference": {
+      "value": "አማካኝ የጃንዋሪ ሙቀት በሃምሳ\\ ኤን ዋና ዋና የአሜሪካ ከተሞች ከኬንትሮሶች ጋር ሲነጻጸር።"
+    },
+    "spendingSalary.graphTitle": {
+      "value": "ወጪ ከደሞዝ ጋር"
+    },
+    "spendingSalary.yAxisTitle": {
+      "value": "ማካኝ ወጪ በእያንዳንዱ ተማሪ (ብር) በሺዎች"
+    },
+    "spendingSalary.xAxisTitle": {
+      "value": "አማካኝ የመምህራን ደሞዝ (ብር) በሺዎች"
+    },
+    "spendingSalary.reference": {
+      "value": "አማካይ የአንድ ተማሪ ወጪ በ1986 ከሃምሳ የአሜሪካ ግዛቶች አማካይ የመምህራን ደሞዝ ጋር ይነጻጸራል።"
+    },
+    "wageYear.graphTitle": {
+      "value": "ዝቅተኛው ደሞዝ እና ጊዜ"
+    },
+    "wageYear.yAxisTitle": {
+      "value": "ዝቅተኛ ደመወዝ (ብር) ለዋጋ ግሽበት የተስተካከለ"
+    },
+    "wageYear.xAxisTitle": {
+      "value": "ከ 1947ዓመታት ጀምሮ "
+    },
+    "wageYear.reference": {
+      "value": "ከ \\ኤን 1947-2005 በዩኤስ ያለው ዝቅተኛ የደመወዝ ዋጋ፣ ለዋጋ ግሽበት የተስተካከለ።"
+    },
+    "mortalityYear.graphTitle": {
+      "value": "የማናት ሟችነት እና ጊዜ"
+    },
+    "mortalityYear.yAxisTitle": {
+      "value": "የማናቴ ሟቾች ቁጥር"
+    },
+    "mortalityYear.xAxisTitle": {
+      "value": "ከ 1947ዓመታት ጀምሮ "
+    },
+    "mortalityYear.reference": {
+      "value": "አጠቃላይ የማናቴ ሞት በፍሎሪዳ ከ1974-2004።"
+    },
+    "userYear.graphTitle": {
+      "value": "የበይነመረብ ተጠቃሚዎች ከ ጊዜ ጋር"
+    },
+    "userYear.yAxisTitle": {
+      "value": "ቅላላ የበይነመረብ ተጠቃሚዎች (በቢሊዮኖች)"
+    },
+    "userYear.xAxisTitle": {
+      "value": "ከ 1990 ዓመታት ጀምሮ "
+    },
+    "userYear.reference": {
+      "value": "ከ1990-2010 አጠቃላይ የአለም አቀፍ የኢንተ"
+    },
+    "gasolineYear.graphTitle": {
+      "value": "የአሜሪካ ቤንዚን ዋጋ ከ ጊዜ ጋር ሲነጻጸር"
+    },
+    "gasolineYear.yAxisTitle": {
+      "value": "ዋጋ በጋሎን (ብር)"
+    },
+    "gasolineYear.xAxisTitle": {
+      "value": "ከ 1976 ዓመታት ጀምሮ "
+    },
+    "gasolineYear.reference": {
+      "value": "አማካይ አመታዊ የቤንዚን ዋጋ\\ኤን1979-2014፣ ለዋጋ ንረት ያልተስተካከለ።"
+    },
+    "lifeTV.graphTitle": {
+      "value": "የህይወት ተስፋ ከቲቪዎች ጋር"
+    },
+    "lifeTV.yAxisTitle": {
+      "value": "የህይወት ተስፋ (ዓመታት)"
+    },
+    "lifeTV.xAxisTitle": {
+      "value": "አማካይ የሰዎች ብዛት በቲቪ"
+    },
+    "lifeTV.reference": {
+      "value": "በ40 አገሮች ያለው የዕድሜ ልክ\\ኤን በዚያ አገር ካለው አማካይ የሰዎች ብዛት ጋር ሲነጻጸር ነው።"
+    },
+    "speedDistance.graphTitle": {
+      "value": "የምህዋር ፍጥነት እና ከፀሐይ ያለው ርቀት"
+    },
+    "speedDistance.yAxisTitle": {
+      "value": "አማካኝ የምህዋር ፍጥነት (ኪሜ/ሴ)"
+    },
+    "speedDistance.xAxisTitle": {
+      "value": "ከፀሐይ (AU) ርቀት"
+    },
+    "speedDistance.reference": {
+      "value": "የፕላኔቷ ምህዋር ፍጥነት በ ከፀሐይ ርቀት."
+    },
+    "temperatureFahrenheitChirp.graphTitle": {
+      "value": "የሙቀት መጠን (˚ፋ) ከክሪኬት ቺፕስ ጋር"
+    },
+    "temperatureFahrenheitChirp.yAxisTitle": {
+      "value": "የሙቀት መጠን (˚ፋ)"
+    },
+    "temperatureFahrenheitChirp.xAxisTitle": {
+      "value": "በ15 ሰከንድ ውስጥ የክሪኬት ቺፕስ ብዛት"
+    },
+    "temperatureFahrenheitChirp.reference": {
+      "value": "በ15 ሰከንድ\\ኤን የክሪኬት ቺርፕ ቁጥር በተመሳሳይ ጊዜ ካለው የሙቀት መጠን ጋር ይነጻጸራል።"
+    },
+    "temperatureCelsiusChirp.graphTitle": {
+      "value": "የሙቀት መጠን (˚ሴ) ከክሪኬት ቺፕስ ጋር"
+    },
+    "temperatureCelsiusChirp.yAxisTitle": {
+      "value": "የሙቀት መጠን (˚ሴ)"
+    },
+    "temperatureCelsiusChirp.xAxisTitle": {
+      "value": "በ15 ሰከንድ ውስጥ የክሪኬት ቺፕስ ብዛት"
+    },
+    "temperatureCelsiusChirp.reference": {
+      "value": "በ15 ሰከንድ ውስጥ ያለው የክሪኬት ቺርፕ ብዛት\\ኤን በተመሳሳይ ጊዜ ከሙቀት ጋር ይነጻጸራል።"
+    },
+    "heightShoe.graphTitle": {
+      "value": "ቁመት እና የጫማ መጠን"
+    },
+    "heightShoe.yAxisTitle": {
+      "value": "ቁመት (ኢንች)"
+    },
+    "heightShoe.xAxisTitle": {
+      "value": "የጫማ መጠን "
+    },
+    "heightShoe.reference": {
+      "value": "ቁመትን ለመተንበይ የሚያገለግል የጫማ መጠን።"
+    },
+    "symbol.x": {
+      "value": "ወ"
+    },
+    "symbol.y": {
+      "value": "የ"
+    },
+    "sum": {
+      "value": "ድምር"
+    },
+    "bestFitLine": {
+      "value": "ምርጥ-የሚመጥን መስመር"
+    },
+    "residuals": {
+      "value": "ቀሪዎች"
+    },
+    "squaredResiduals": {
+      "value": "ካሬ ቅርጽ ያላቸው ቀሪዎች"
+    },
+    "a": {
+      "value": "አ"
+    },
+    "b": {
+      "value": "በ"
+    },
+    "myLine": {
+      "value": "የኔ መስመር"
+    },
+    "symbol.r": {
+      "value": "ረ"
+    },
+    "correlationCoefficient": {
+      "value": "ተዛማጅ\nተመጣጣኝ"
+    },
+    "sourcePattern": {
+      "value": "ምንጭ: {0}"
+    },
+    "questionMark": {
+      "value": "?"
+    },
+    "least-squares-regression.title": {
+      "value": "ትንሹ-ካሬዎች መመለሻ"
+    }
+  },
   "ar": {
     "custom.graphTitle": {
       "value": "تخصيص"
