Update development strings from daily grunt work

--- a/_generated_development_strings/projectile-motion_all.json
+++ b/_generated_development_strings/projectile-motion_all.json
@@ -4396,7 +4396,7 @@
       "value": "Pagreičio vektoriai"
     },
     "total": {
-      "value": "Iš viso"
+      "value": "Suminis"
     },
     "components": {
       "value": "Komponentai"
@@ -4435,7 +4435,7 @@
       "value": "Aukštis"
     },
     "screen.drag": {
-      "value": "Bandymai"
+      "value": "Pasipriešinimas"
     },
     "gravity": {
       "value": "Gravitacija"
