Update development strings from daily grunt work

--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -8135,6 +8135,221 @@
       "value": "Регресија најмањих квадрата"
     }
   },
+  "st": {
+    "custom.graphTitle": {
+      "value": "tloaelo"
+    },
+    "temperatureCelsiusLatitude.graphTitle": {
+      "value": "mocheso (˚C) vs Lathuchut"
+    },
+    "temperatureCelsiusLatitude.yAxisTitle": {
+      "value": "kakaretso ea mocheso oa Pherekhong"
+    },
+    "temperatureCelsiusLatitude.xAxisTitle": {
+      "value": "Lathichut"
+    },
+    "temperatureCelsiusLatitude.reference": {
+      "value": " Kakaretso ea mokheso oa pherekhong ka mashome a mahlano/nhaholo linaheng tsa US ho bapisoa le lathichut"
+    },
+    "temperatureCelsiusLongitude.graphTitle": {
+      "value": "mocheso  (˚C) khahlanong le longitude"
+    },
+    "temperatureCelsiusLongitude.yAxisTitle": {
+      "value": "kakaretso ea mocheso oa pherekhong  (˚C)"
+    },
+    "temperatureCelsiusLongitude.xAxisTitle": {
+      "value": "longitude"
+    },
+    "temperatureCelsiusLongitude.reference": {
+      "value": "Kakaretso ea mokheso oa pherekhong ka mashome a mahlano/nhaholo linaheng tsa US ho bapisoa le longitude"
+    },
+    "temperatureFahrenheitLatitude.graphTitle": {
+      "value": "mocheso (˚F) khahlanong le lathichut"
+    },
+    "temperatureFahrenheitLatitude.yAxisTitle": {
+      "value": "kakaretso ea mocheso oa pherekhong  (˚F)"
+    },
+    "temperatureFahrenheitLatitude.xAxisTitle": {
+      "value": "lathicht"
+    },
+    "temperatureFahrenheitLatitude.reference": {
+      "value": "Kakaretso ea mokheso oa pherekhong ka mashome a mahlano/nhaholo linaheng tsa US ho bapisoa le lathichut"
+    },
+    "temperatureFahrenheitLongitude.graphTitle": {
+      "value": "mocheso (˚F) khahlanong le longitude"
+    },
+    "temperatureFahrenheitLongitude.yAxisTitle": {
+      "value": "kakaretso ea mocheso oa pherekhong  (˚F)"
+    },
+    "temperatureFahrenheitLongitude.xAxisTitle": {
+      "value": "longitude"
+    },
+    "temperatureFahrenheitLongitude.reference": {
+      "value": "Kakaretso ea mokheso oa pherekhong ka mashome a mahlano/nhaholo linaheng tsa US ho bapisoa le longitude"
+    },
+    "spendingSalary.graphTitle": {
+      "value": "ho sebelisa chelete khahlanong le mokholo oa kheli"
+    },
+    "spendingSalary.yAxisTitle": {
+      "value": "kakaretso ea ho sebelisa likete (USD) ngoana ka bo mong"
+    },
+    "spendingSalary.xAxisTitle": {
+      "value": "kakaretso ea mokholo (USD) oa mosuoe ka likete"
+    },
+    "spendingSalary.reference": {
+      "value": "kakaretso ea ho sebelisa chelete ka ngoana ka bo mong kahlanong le/nkakaretso ea mokholo oa mosuoe ka mashome a mahlano naheng ea US ka selemo ea 1986"
+    },
+    "wageYear.graphTitle": {
+      "value": "moputso o ka tlase-tlase khahlanong le nako"
+    },
+    "wageYear.yAxisTitle": {
+      "value": "moputso o ka tlase-tlase(USD) o ekelitso ho ipapisoa le moruo"
+    },
+    "wageYear.xAxisTitle": {
+      "value": "ho tloha selemong sa 1947"
+    },
+    "wageYear.reference": {
+      "value": "boleng ba moputso o ka tlase-tlase US ho tloha /n 1947-2005, o ekelitsoe ho latela moro"
+    },
+    "mortalityYear.graphTitle": {
+      "value": "lefu la Manatee khahlanong le nako"
+    },
+    "mortalityYear.yAxisTitle": {
+      "value": "lipalo tsa lefu la manatee"
+    },
+    "mortalityYear.xAxisTitle": {
+      "value": "ho tloha selemong sa 1974"
+    },
+    "mortalityYear.reference": {
+      "value": "kakaretso ea lefu la manatee Ka hara ho Florida ho tloha 1974-2004"
+    },
+    "userYear.graphTitle": {
+      "value": "baseslisi ba marang-rang khahlanong le nako"
+    },
+    "userYear.yAxisTitle": {
+      "value": "kakaretso ea baselisi ba marang-rang ka (li-billione)"
+    },
+    "userYear.xAxisTitle": {
+      "value": "ho tloha selemong sa 1990"
+    },
+    "userYear.reference": {
+      "value": "kakaretso ea basebelisi ba marang-rang lefaat'se kaoela ho tloha 1990-2010"
+    },
+    "gasolineYear.graphTitle": {
+      "value": "theko ea peterole khahlanong le nako"
+    },
+    "gasolineYear.yAxisTitle": {
+      "value": "theko gallon ka 'ngoe(USD)"
+    },
+    "gasolineYear.xAxisTitle": {
+      "value": "Hotloha selemong sa 1976"
+    },
+    "gasolineYear.reference": {
+      "value": "kakaretso theko ea peterole selemo ka seng ho tloha/n1979-2014 e sa eketsoa ho latela moruo"
+    },
+    "lifeTV.graphTitle": {
+      "value": "litebello tsa bophelo khahlanong le TV"
+    },
+    "lifeTV.yAxisTitle": {
+      "value": "litebello tsa bophelo ka (lilemo)"
+    },
+    "lifeTV.xAxisTitle": {
+      "value": "kakaretso ea lipalo tsa bathoho latelaTV"
+    },
+    "lifeTV.reference": {
+      "value": "litebello tsa bophelo linaheng tse 40 ho bapisoa le/nkakaretso ea lipalo tsa batho ho ea ka TV naheng eno"
+    },
+    "speedDistance.graphTitle": {
+      "value": "lebelo la mophula khahlahong le bolelele ho tloha letsatsing"
+    },
+    "speedDistance.yAxisTitle": {
+      "value": "kakaretso ea lebelo la mophula (km/s)"
+    },
+    "speedDistance.xAxisTitle": {
+      "value": "bolelele ho tloha letsatsing  (AU)"
+    },
+    "speedDistance.reference": {
+      "value": "Lebelo la mphula oa lefat'se ka bolelele ba ho tloha letsatsing"
+    },
+    "temperatureFahrenheitChirp.graphTitle": {
+      "value": "mocheso (˚F)  khahlanong le krikete chirps"
+    },
+    "temperatureFahrenheitChirp.yAxisTitle": {
+      "value": "mocheso (˚F)"
+    },
+    "temperatureFahrenheitChirp.xAxisTitle": {
+      "value": "lipalo tsa kriketechirps ka metsoana e 15s"
+    },
+    "temperatureFahrenheitChirp.reference": {
+      "value": "lipalo tsa krikete chirps ka metsotsoana e 15s/nka nako li bapisoa le mocheso oa nako e t'soanang"
+    },
+    "temperatureCelsiusChirp.graphTitle": {
+      "value": "mocheso (˚C)  khahlanong le krikete chirps"
+    },
+    "temperatureCelsiusChirp.yAxisTitle": {
+      "value": "mocheso (˚C)"
+    },
+    "temperatureCelsiusChirp.xAxisTitle": {
+      "value": "lipalo tsa kriketechirps ka metsoana e 15s"
+    },
+    "temperatureCelsiusChirp.reference": {
+      "value": "lipalo tsa krikete chirps ka metsotsoana e 15s/nka nako li bapisoa le mocheso oa nako e t'soanang"
+    },
+    "heightShoe.graphTitle": {
+      "value": "bophahamo va boholo ba seeta"
+    },
+    "heightShoe.yAxisTitle": {
+      "value": "Bohahamo(in)"
+    },
+    "heightShoe.xAxisTitle": {
+      "value": "boholo ba seeta (US)"
+    },
+    "heightShoe.reference": {
+      "value": "boholo ba seeta se sebelisitsoeng ho bolela e sale pele bophahamo"
+    },
+    "symbol.x": {
+      "value": "x"
+    },
+    "symbol.y": {
+      "value": "y"
+    },
+    "sum": {
+      "value": "kakaretso"
+    },
+    "bestFitLine": {
+      "value": "mola o lutseng hantle"
+    },
+    "residuals": {
+      "value": "masalla"
+    },
+    "squaredResiduals": {
+      "value": "masalla a sekoere"
+    },
+    "a": {
+      "value": "a"
+    },
+    "b": {
+      "value": "b"
+    },
+    "myLine": {
+      "value": "mola ua ka"
+    },
+    "symbol.r": {
+      "value": "r"
+    },
+    "correlationCoefficient": {
+      "value": "Correlation\nCoefficient"
+    },
+    "sourcePattern": {
+      "value": "mohloli: {0}"
+    },
+    "questionMark": {
+      "value": "?"
+    },
+    "least-squares-regression.title": {
+      "value": "Bonyane ba likoere boiketlo"
+    }
+  },
   "sw": {
     "custom.graphTitle": {
       "value": "Desturi"
