--- a/_generated_development_strings/least-squares-regression_all.json
+++ b/_generated_development_strings/least-squares-regression_all.json
@@ -6484,6 +6484,221 @@
       "value": "Minimum loon (dollar) aangepast aan inflatie"
     }
   },
+  "ny": {
+    "custom.graphTitle": {
+      "value": "Custom"
+    },
+    "temperatureCelsiusLatitude.graphTitle": {
+      "value": "Kutentha (˚C) vs. Latitude"
+    },
+    "temperatureCelsiusLatitude.yAxisTitle": {
+      "value": "Avereji ya Kutentha kwa Januware (˚C)"
+    },
+    "temperatureCelsiusLatitude.xAxisTitle": {
+      "value": "Latitude"
+    },
+    "temperatureCelsiusLatitude.reference": {
+      "value": "Kutentha kwapakati pa Januware m'mizinda makumi asanu\nikuluikulu yaku US kuyerekeza ndi ma latitutde ake."
+    },
+    "temperatureCelsiusLongitude.graphTitle": {
+      "value": "Kutentha (˚C) vs. Longitude"
+    },
+    "temperatureCelsiusLongitude.yAxisTitle": {
+      "value": "Avereji ya Kutentha kwa Januware (˚C)"
+    },
+    "temperatureCelsiusLongitude.xAxisTitle": {
+      "value": "Longitude"
+    },
+    "temperatureCelsiusLongitude.reference": {
+      "value": "Kutentha kwapakati pa Januware m'mizinda makumi asanu\nikuluikulu yaku US kuyerekeza ndi ma longitude ake."
+    },
+    "temperatureFahrenheitLatitude.graphTitle": {
+      "value": "Kutentha (˚C) vs. Latitude"
+    },
+    "temperatureFahrenheitLatitude.yAxisTitle": {
+      "value": "Avereji ya Kutentha kwa Januware (˚F)"
+    },
+    "temperatureFahrenheitLatitude.xAxisTitle": {
+      "value": "Latitude"
+    },
+    "temperatureFahrenheitLatitude.reference": {
+      "value": "Kutentha kwapakati pa Januware m'mizinda makumi asanu\nikuluikulu yaku US kuyerekeza ndi ma latitutde ake."
+    },
+    "temperatureFahrenheitLongitude.graphTitle": {
+      "value": "Kutentha (˚F) vs. Longitude"
+    },
+    "temperatureFahrenheitLongitude.yAxisTitle": {
+      "value": "Avereji ya Kutentha kwa Januware (˚F)"
+    },
+    "temperatureFahrenheitLongitude.xAxisTitle": {
+      "value": "Longitude"
+    },
+    "temperatureFahrenheitLongitude.reference": {
+      "value": "Kutentha kwapakati pa Januware m'mizinda makumi asanu\nikuluikulu yaku US kuyerekeza ndi ma longitude ake."
+    },
+    "spendingSalary.graphTitle": {
+      "value": "Kuwononga ndalama motsutsana ndi Malipiro"
+    },
+    "spendingSalary.yAxisTitle": {
+      "value": "Avereji ya Ndalama zomwe Mwana aliyense amawononga (USD) mu masauzande"
+    },
+    "spendingSalary.xAxisTitle": {
+      "value": "Avereji ya Malipiro a Aphunzitsi (USD) mu masauzande"
+    },
+    "spendingSalary.reference": {
+      "value": "Avereji ya ndalama zomwe wophunzira amawononga zimayerekezedwa ndi\\malipiro a aphunzitsi m'maboma makumi asanu a US mu 1986."
+    },
+    "wageYear.graphTitle": {
+      "value": "Malipiro Ochepa vs. Nthawi"
+    },
+    "wageYear.yAxisTitle": {
+      "value": "Malipiro Ochepera (USD) Adasinthidwa pa Kukwera kwa Ndalama"
+    },
+    "wageYear.xAxisTitle": {
+      "value": "Zaka Kuyambira 1947"
+    },
+    "wageYear.reference": {
+      "value": "Mtengo wa malipiro ochepa ku US kuyambira \n1947-2005, wosinthidwa chifukwa cha kukwera kwa mitengo."
+    },
+    "mortalityYear.graphTitle": {
+      "value": "Infa ya Manatee vs. Nthawi"
+    },
+    "mortalityYear.yAxisTitle": {
+      "value": "Chiwerengero cha Anthu Omwalira ku Manatee"
+    },
+    "mortalityYear.xAxisTitle": {
+      "value": "Zaka kuyambira 1974"
+    },
+    "mortalityYear.reference": {
+      "value": "Chiwerengero cha kufa kwa manatee ku Florida kuyambira 1974-2004."
+    },
+    "userYear.graphTitle": {
+      "value": "Ogwiritsa Ntchito Paintaneti motsutsana ndi Nthawi"
+    },
+    "userYear.yAxisTitle": {
+      "value": "Onse Ogwiritsa Ntchito Paintaneti (mu mabiliyoni)"
+    },
+    "userYear.xAxisTitle": {
+      "value": "Zaka kuyambira 1990"
+    },
+    "userYear.reference": {
+      "value": "Ogwiritsa ntchito intaneti padziko lonse lapansi kuyambira 1990-2010."
+    },
+    "gasolineYear.graphTitle": {
+      "value": "tengo wa Petroli waku US vs. Nthawi"
+    },
+    "gasolineYear.yAxisTitle": {
+      "value": "Mtengo pa galoni (USD)"
+    },
+    "gasolineYear.xAxisTitle": {
+      "value": "Zaka kuyambira 1976"
+    },
+    "gasolineYear.reference": {
+      "value": "Avereji yamtengo wapachaka wamafuta amafuta kuyambira\n1979-2014, osasinthidwa chifukwa cha kukwera kwa mitengo."
+    },
+    "lifeTV.graphTitle": {
+      "value": "Chiyembekezo cha Moyo vs. Ma TV"
+    },
+    "lifeTV.yAxisTitle": {
+      "value": "Chiyembekezo cha Moyo (zaka)"
+    },
+    "lifeTV.xAxisTitle": {
+      "value": "Chiwerengero cha Anthu Pa TV"
+    },
+    "lifeTV.reference": {
+      "value": "Utali wa moyo m’maiko 40 umayerekezedwa ndi \\avareji ya anthu pa TV iliyonse m’dziko"
+    },
+    "speedDistance.graphTitle": {
+      "value": "Liwiro la Orbital vs. mtanda kuchokera ku Dzuwa"
+    },
+    "speedDistance.yAxisTitle": {
+      "value": "Liwiro la Orbital (km/s)"
+    },
+    "speedDistance.xAxisTitle": {
+      "value": "Mtunda wochokera ku Dzuwa (AU)"
+    },
+    "speedDistance.reference": {
+      "value": "Liwiro la pulaneti la orbital ndi mtunda kuchokera ku Dzuwa."
+    },
+    "temperatureFahrenheitChirp.graphTitle": {
+      "value": "Kutentha (˚F) vs. Cricket Chirps"
+    },
+    "temperatureFahrenheitChirp.yAxisTitle": {
+      "value": "Kutentha (˚F)"
+    },
+    "temperatureFahrenheitChirp.xAxisTitle": {
+      "value": "Chiwerengero cha Cricket Chirps mu 15 Seconds"
+    },
+    "temperatureFahrenheitChirp.reference": {
+      "value": "Chiwerengero cha cricket chimalira mumasekondi 15\n chikufanizidwa ndi kutentha nthawi imodzi."
+    },
+    "temperatureCelsiusChirp.graphTitle": {
+      "value": "Kutentha (˚C) vs. Cricket Chirps"
+    },
+    "temperatureCelsiusChirp.yAxisTitle": {
+      "value": "Kutentha (˚C)"
+    },
+    "temperatureCelsiusChirp.xAxisTitle": {
+      "value": "Kutentha (˚C) vs. Cricket Chirps"
+    },
+    "temperatureCelsiusChirp.reference": {
+      "value": "Chiwerengero cha cricket chimalira mumasekondi 15\n chikufanizidwa ndi kutentha nthawi imodzi."
+    },
+    "heightShoe.graphTitle": {
+      "value": "Kutalika vs. Kukula kwa Nsapato"
+    },
+    "heightShoe.yAxisTitle": {
+      "value": "Kutalika (in)"
+    },
+    "heightShoe.xAxisTitle": {
+      "value": "Kukula kwa Nsapato (US)"
+    },
+    "heightShoe.reference": {
+      "value": "Kukula kwa nsapato kumaneneratu kutalika."
+    },
+    "symbol.x": {
+      "value": "x"
+    },
+    "symbol.y": {
+      "value": "y"
+    },
+    "sum": {
+      "value": "sum"
+    },
+    "bestFitLine": {
+      "value": "Best-Fit Line"
+    },
+    "residuals": {
+      "value": "Zotsalira"
+    },
+    "squaredResiduals": {
+      "value": "Zotsalira za square"
+    },
+    "a": {
+      "value": "a"
+    },
+    "b": {
+      "value": "b"
+    },
+    "myLine": {
+      "value": "Mzere Wanga"
+    },
+    "symbol.r": {
+      "value": "r"
+    },
+    "correlationCoefficient": {
+      "value": "Correlation\nCoefficient"
+    },
+    "sourcePattern": {
+      "value": "Gwero: {0}"
+    },
+    "questionMark": {
+      "value": "?"
+    },
+    "least-squares-regression.title": {
+      "value": "Least-Squares Regression"
+    }
+  },
   "om": {
     "custom.graphTitle": {
       "value": "Duunfadhu"
